panels/which-key.scss
.which-key {
    .key-chord {
        font-family: $text-font;
        font-size: 24pt;
        color: $base04;
    }

    .key-map {
        font-family: $text-font;
        font-size: 18pt;

        .keys         { color: $base0B; }
        .separators   { color: $base03; font-family: $icon-font; }
        .descriptions { color: $base0D; }
    }
}

